# learning

./: .gitignore  README.md
codes/: CoT_basic_or_Zero_Shot_CoT.py  CoT_business_decision_making.py  CoT_code_debug.py  CoT_maths.py  CoT_structured_xml_tag.py  Few_Shot_CoT.py  Self_Consistency_CoT.py  accumulate_streaming_anthropic.py  accumulate_streaming_openai.py  anatomy_streaming_response_anthropic.py  async_streaming_anthropic.py  async_streaming_openai.py  bad_and_good_system_prompt.py  basic_streaming_anthropic.py  basic_streaming_openai.py  bm25_search.py  chat_completion_openai_with_type_hint.py  chromadb_operations.py  claude_extended_thinking_basic.py  claude_extended_thinking_complete.py  cosine_similarity_compare_sklearn.py  cross_encoder.py  dspy_basic.py  dspy_module_CoT.py  dspy_module_custom_module.py  dspy_module_predict.py  dspy_module_reAct.py  dspy_optimizer_basic.py  dspy_signature_basic.py  dspy_signature_class_based.py  embedding_2D_visualize.py  embedding_basic_openai.py  embedding_cosine_similarity.py  embedding_cost_latency_hugging_face.py  embedding_cost_latency_openai.py  embedding_rank_compare_openai_huggingface.py  exp_backoff_manual_basic.py  exp_backoff_prod_ready_template.py  exp_backoff_tenacity_basic.py  exp_backoff_tenacity_basic_logger.py  (+86 more)
codes/chroma_store/: chroma.sqlite3
codes/output/: RecursiveCharacterTextSplitter_output.txt
codes/plan/rag_pipeline/: PLAN.md
docs/: rag_notes.md  tech_ai_system_prompt.md  test.csv
