[project]
name = "codes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.105.2",
    "dspy>=2.6.27",
    "fastapi>=0.128.8",
    "langchain>=0.3.30",
    "langchain-openai>=0.3.35",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "openai>=2.38.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.6.1",
    "tenacity>=9.1.2",
    "tiktoken>=0.13.0",
    "tokenizers>=0.22.0,<=0.23.0",
]
