[project]
name = "codes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.105.2",
    "chromadb>=1.5.9",
    "dspy>=2.6.27",
    "fastapi>=0.128.8",
    "langchain>=0.3.30",
    "langchain-openai>=0.3.35",
    "openai>=2.38.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tenacity>=9.1.2",
    "tiktoken>=0.13.0",
]
