[project]
name = "codes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.105.2",
    "bs4>=0.0.2",
    "chromadb>=1.5.9",
    "dspy>=2.6.27",
    "fastapi>=0.128.8",
    "fpdf2>=2.8.4",
    "langchain>=0.3.30",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.86",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.35",
    "langchain-pinecone>=0.2.12",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "openai>=2.38.0",
    "pinecone>=7.3.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.6.1",
    "tenacity>=9.1.2",
    "tiktoken>=0.13.0",
    "tokenizers>=0.22.0,<=0.23.0",
    "unstructured[md]>=0.18.3",
]
